--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,18 +4,23 @@
     <!-- Activity titles  -->
     <string name="activity_login_title">Sign in</string>
     <string name="activity_register_title">Sign up</string>
+    <string name="activity_main_title">Main Activity</string>
 
     <string name="login_username_hint">Type your username</string>
     <string name="login_username_or_email_label">Username or email</string>
     <string name="login_password_hint">Type your password</string>
     <string name="login_password_label">Password</string>
+
+    <string name="terms_and_conditions_acceptance_statement"><![CDATA[I agree and accept the Terms & Conditions of the Mentorship System]]></string>
+    <string name="error_not_matching_passwords">Passwords are not matching!</string>
+
+    <!-- Common words -->
     <string name="login">Login</string>
     <string name="register">Register</string>
-    <string name="terms_and_conditions_acceptance_statement"><![CDATA[I agree and accept the Terms & Conditions of the Mentorship System]]></string>
-    <string name="email">Email</string>
     <string name="sign_up">Sign Up</string>
     <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
     <string name="confirm_password">Confirm password</string>
-    <string name="error_not_matching_passwords">Passwords are not matching!</string>
-    <string name="activity_main_title">Main Activity</string>
 </resources>
