--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">Systers Mentorship</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="navigation_title_home">Home</string>
+    <string name="navigation_title_profile">Profile</string>
+    <string name="navigation_title_relation">Relation</string>
+    <string name="navigation_title_members">Members</string>
+    <string name="navigation_title_requests">Requests</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="popup_menu_feedback">Feedback</string>
+    <string name="popup_menu_about">About</string>
+    <string name="popup_menu_settings">Settings</string>
+    <string name="fragment_title_home">Home</string>
+    <string name="fragment_title_members">Members</string>
+    <string name="fragment_title_profile">My Profile</string>
+    <string name="fragment_title_relation">Current Relation</string>
+    <string name="fragment_title_requests">Mentorship Requests</string>
 </resources>
