--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,21 @@
 <resources>
     <string name="app_name">Systers Mentorship</string>
+
+    <string name="hint_login_username_or_email">Username or Email</string>
+    <string name="hint_login_password">Password</string>
+
+    <string name="sign_up">Sign Up</string>
+
+    <string name="error_general_login">We\'re sorry, something went wrong with login.</string>
+
+    <string name="logo">Logo</string>
+    <string name="login">Login</string>
+    <string name="logging_in">Logging in…</string>
+    <string name="logging_successful">Logging successful</string>
+
+    <string name="error_please_check_internet">Please check your internet connection</string>
+    <string name="error_request_timed_out">Request timed out</string>
+    <string name="error_something_went_wrong">Something went wrong</string>
+    <string name="error_empty_login_password">Password cannot be empty</string>
+    <string name="error_empty_login_username">Username cannot be empty</string>
 </resources>
